--- a/exemple/exemple3/Cargo.toml
+++ b/exemple/exemple3/Cargo.toml
@@ -1,1 +1,10 @@
+[package]
+name = "exemple3"
+version = "0.1.0"
+authors = ["rammal <darine_rammal@hotmail.com>"]
+edition = "2018"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+ test_librairy = {path = "/home/rammal/CARGO/comparaison/test_librairy"}
