--- a/exemple/exemple4/Cargo.toml
+++ b/exemple/exemple4/Cargo.toml
@@ -1,1 +1,10 @@
+[package]
+name = "exemple4"
+version = "0.1.0"
+authors = ["rammal <darine_rammal@hotmail.com>"]
+edition = "2018"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+lib_thread = {path = "/home/rammal/CARGO/exemple_sur_github/lib_thread"}
