--- a/exemple/n_planets/Cargo.toml
+++ b/exemple/n_planets/Cargo.toml
@@ -1,1 +1,28 @@
+[package]
+name = "n_planet"
+version = "0.1.0"
+authors = ["rammal <darine_rammal@hotmail.com>"]
+edition = "2018"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+lib_thread = {path = "/home/rammal/CARGO/exemple_sur_github/lib_thread"}
+piston = "0.52.0"
+piston2d-graphics = "0.39.0"
+pistoncore-glutin_window = "0.68.0"
+piston2d-opengl_graphics = "0.77.0"
+piston_window = "0.117.0"
+find_folder = "0.3.0"
+piston-ai_behavior = "0.32.0"
+piston2d-sprite = "0.63.0"
+image = "0.23.0"
+piston2d-drag_controller = "0.30.0"
+piston2d-deform_grid = "0.9.0"
+gfx = "0.18.1"
+gfx_device_gl = "0.16.2"
+vecmath = "1.0.0"
+camera_controllers = "0.32.0"
+rand = "0.6.0"
+shader_version = "0.7.0"
+num = "0.1.27"
